# Lumen

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
initiatives/lumen-ui-redesign/design/: design-brief-lumen-ui.json  design-brief-lumen-ui.md
src/: App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/llm/: glm_client.rs  mod.rs  types.rs
src-tauri/src/memory/: extractor.rs  mod.rs  rag.rs  store.rs
src/components/chat/: ChatView.tsx
src/components/memory/: MemoriesView.tsx
src/components/settings/: SettingsView.tsx
src/components/ui/: Badge.tsx  Tooltip.tsx
src/lib/: ipc.ts  store.ts  time.ts
src/styles/: globals.css
