[package]
name = "lumen"
version = "0.1.0"
description = "Lumen — a local-first Windows memory brain"
authors = ["Summus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client for GLM API
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# SQLite (bundled so no system lib needed on Windows)
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Misc
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
